[Payments] Don't show error for intl phone from other country.

BUG=727432

Review-Url: https://codereview.chromium.org/2911973002
Cr-Commit-Position: refs/heads/master@{#476028}

Former-commit-id: 0efa58326c8a9203c0d44a5266b64742e9ad01ed