components/payments/core/payments_profile_comparator.cc
@@ -207,7 +207,9 @@ PaymentsProfileComparator::ComputeMissingFields(
 
   base::string16 phone = profile.GetInfo(
       autofill::AutofillType(autofill::PHONE_HOME_WHOLE_NUMBER), app_locale());
-  if (!autofill::IsValidPhoneNumber(phone, country))
+  base::string16 intl_phone = base::UTF8ToUTF16("+" + base::UTF16ToUTF8(phone));
+  if (!(autofill::IsValidPhoneNumber(phone, country) ||
+        autofill::IsValidPhoneNumber(intl_phone, country)))
     missing |= kPhone;
 
   base::string16 email = profile.GetInfo(
